<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".feature.edit.activity.EditActivity">

    <include
        layout="@layout/toolbar_layout"
        android:id="@+id/editToolbar" />

    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnCompleteTask"
            android:layout_gravity="bottom|end"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_check"/>

        <android.support.v4.widget.NestedScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputTitleLayout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:hint="@string/edit_title_hint"
                        android:id="@+id/editTitle"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputDescriptionLayout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputTitleLayout">

                    <EditText
                        android:hint="@string/edit_description_hint"
                        android:id="@+id/editDescription"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textStatusTitle"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:text="@string/activity_edit_status_title"
                    app:layout_constraintTop_toBottomOf="@+id/textInputDescriptionLayout" />

                <Spinner
                    android:entries="@array/status"
                    android:id="@+id/spinStatus"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/textStatusTitle" />

                <TextView
                    android:id="@+id/textPriorityTitle"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:text="@string/activity_edit_priority_title"
                    app:layout_constraintTop_toBottomOf="@+id/spinStatus" />

                <Spinner
                    android:entries="@array/priority"
                    android:id="@+id/spinPriority"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/textPriorityTitle" />

                <TextView
                    android:id="@+id/textHistoryTitle"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:text="@string/activity_edit_history_title"
                    app:layout_constraintTop_toBottomOf="@+id/spinPriority" />

                <TextView
                    android:id="@+id/textHistory"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/textHistoryTitle" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>
    </FrameLayout>
</LinearLayout>