<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.ic218.mytaskmanager.feature.main.activity.MainActivity">

    <include
        android:id="@+id/mainToolbar"
        layout="@layout/toolbar_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/taskDivider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/rv_wait_title" />

            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="8dp"
                android:id="@+id/rvWait"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"/>
        </LinearLayout>


        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/taskDivider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/rv_progress_title" />

            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="8dp"
                android:id="@+id/rvProgress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never" />
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/taskDivider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/rv_done_title" />

            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="8dp"
                android:id="@+id/rvDone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"/>
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnCreateTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>

